[gd_scene load_steps=16 format=3 uid="uid://cnatx4dyn1x6f"]

[ext_resource type="Script" uid="uid://draspvirwytto" path="res://Scripts/start_menu.gd" id="1_626he"]
[ext_resource type="Texture2D" uid="uid://dqo2nbs3kxndf" path="res://Assets/start/背景.png" id="1_juhg0"]
[ext_resource type="Texture2D" uid="uid://ccwo2ci83recv" path="res://Assets/start/宇宙飞船.png" id="2_m6uer"]
[ext_resource type="Texture2D" uid="uid://bmnfsne0hc322" path="res://Assets/start/地球.png" id="3_a43kq"]
[ext_resource type="Texture2D" uid="uid://0qoe15yb0ilk" path="res://Assets/start/锈蚀星河.png" id="4_a43kq"]
[ext_resource type="Texture2D" uid="uid://hbta7luruyj1" path="res://Assets/start/陨石.png" id="6_8u0lp"]
[ext_resource type="Texture2D" uid="uid://8geuddi2csb4" path="res://Assets/木星.png" id="7_00l4x"]
[ext_resource type="AudioStream" uid="uid://dcfvx7vh2tcli" path="res://Assets/music/The Cosmic Crusade.mp3" id="7_lfskg"]
[ext_resource type="Script" uid="uid://cqq64snbvrdqh" path="res://Scripts/bgm.gd" id="8_ru7em"]
[ext_resource type="AudioStream" uid="uid://begl8qwmq2s2y" path="res://Assets/music/Classic UI SFX - Short - Low #2.wav" id="9_77ila"]
[ext_resource type="AudioStream" uid="uid://dh7vcv7tnu11a" path="res://Assets/Chords/Classic UI SFX - Chords #10.wav" id="10_77ila"]

[sub_resource type="Theme" id="Theme_8u0lp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8u0lp"]
bg_color = Color(0, 0, 0, 0.12549)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="Theme" id="Theme_77ila"]

[sub_resource type="Theme" id="Theme_i2i62"]
default_font_size = 46

[node name="Start_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_626he")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1379.0
offset_bottom = 822.0
texture = ExtResource("1_juhg0")
expand_mode = 3

[node name="地球" type="Sprite2D" parent="."]
position = Vector2(539, 318)
scale = Vector2(0.264593, 0.264593)
texture = ExtResource("3_a43kq")
flip_h = true

[node name="木星" type="Sprite2D" parent="."]
position = Vector2(1220, 112)
scale = Vector2(0.8, 0.8)
texture = ExtResource("7_00l4x")

[node name="宇宙飞船" type="Sprite2D" parent="."]
position = Vector2(1085, 634)
scale = Vector2(0.201926, 0.204116)
texture = ExtResource("2_m6uer")
flip_h = true

[node name="TextureRect2" type="TextureRect" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -305.0
offset_top = 43.0
offset_right = 306.0
offset_bottom = 193.0
grow_horizontal = 2
texture = ExtResource("4_a43kq")
expand_mode = 2

[node name="陨石" type="Sprite2D" parent="."]
position = Vector2(345, 4)
scale = Vector2(0.425, 0.411)
texture = ExtResource("6_8u0lp")
flip_h = true

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(600, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -96.0
offset_right = 300.0
offset_bottom = 227.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8u0lp")
theme_override_styles/panel = SubResource("StyleBoxFlat_8u0lp")

[node name="GridContainer" type="GridContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_77ila")
theme_override_constants/v_separation = 100

[node name="开始游戏" type="Button" parent="PanelContainer/GridContainer"]
custom_minimum_size = Vector2(360, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("Theme_i2i62")
text = "开始游戏"

[node name="退出游戏" type="Button" parent="PanelContainer/GridContainer"]
custom_minimum_size = Vector2(360, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_i2i62")
text = "退出游戏"

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_lfskg")
volume_db = 8.0
autoplay = true
script = ExtResource("8_ru7em")

[node name="BGM2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_77ila")
volume_db = 2.0
script = ExtResource("8_ru7em")

[node name="BGM3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_77ila")
volume_db = 8.0
script = ExtResource("8_ru7em")

[connection signal="button_down" from="PanelContainer/GridContainer/开始游戏" to="." method="_on_开始游戏_button_down"]
[connection signal="mouse_entered" from="PanelContainer/GridContainer/开始游戏" to="." method="_on_开始游戏_mouse_entered"]
[connection signal="button_down" from="PanelContainer/GridContainer/退出游戏" to="." method="_on_退出游戏_button_down"]
[connection signal="mouse_entered" from="PanelContainer/GridContainer/退出游戏" to="." method="_on_退出游戏_mouse_entered"]
